# CSVImporter

./: BuildRecsColsCharsHeaders.cu  CMakeLists.txt  CSVImporter_CUDA8.sln  CSVImporter_CUDA8.vcxproj  CSV_kernel_declarations.cuh  CommaProcessing.cu  CommonDefinitions.h  GetCharNumsInColumns.cu  GetColumnNumsInRecords.cu  GetRecLengthsAndColCountErrors.cu  LICENSE  Main.cpp  MainLauncher.cu  RecordsColumnsChars_StreamCompact.cu  SimpleStreamCompact.cu  WriteCSVRecord2.cu  csvCPUfuncs.cpp  csvGPUfuncs.cpp  csvGlobals.cpp  csvImporter.h  helper_cuda.h  helper_string.h
include/: mgpudevice.cuh  mgpuenums.h  mgpuhost.cuh  moderngpu.cuh  sparsematrix.h
include/device/: ctaloadbalance.cuh  ctamerge.cuh  ctascan.cuh  ctasearch.cuh  ctasegscan.cuh  ctasegsort.cuh  ctasortedsearch.cuh  devicetypes.cuh  deviceutil.cuh  intrinsics.cuh  launchbox.cuh  loadstore.cuh  serialsets.cuh  sortnetwork.cuh
include/kernels/: bulkinsert.cuh  bulkremove.cuh  csrtools.cuh  cubradixsort.cuh  intervalmove.cuh  join.cuh  loadbalance.cuh  localitysort.cuh  merge.cuh  reduce.cuh  reducebykey.cuh  scan.cuh  search.cuh  segmentedsort.cuh  segreduce.cuh  segreducecsr.cuh  sets.cuh  sortedsearch.cuh  spmvcsr.cuh
include/util/: format.h  mgpualloc.h  mgpucontext.h  static.h  util.h
src/: mgpucontext.cu  mgpuutil.cpp  mmio.cpp  sparsematrix.cpp
